// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalBanner matches snapshot (desktop, alert) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: 0 var(--spacing-2x) var(--spacing-1x) var(--spacing-5x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: var(--spacing-1x);
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  left: calc(var(--spacing-3x) * -1);
  position: absolute;
  top: var(--spacing-half);
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #f99d99;
  color: #f99d99;
}

.c9:focus {
  background-color: #CD2C23;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: var(--spacing-1x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: unset;
}

.c6 * + * {
  margin-left: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        alert
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, default) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: 0 var(--spacing-2x) var(--spacing-1x) var(--spacing-5x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: var(--spacing-1x);
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  left: calc(var(--spacing-3x) * -1);
  position: absolute;
  top: var(--spacing-half);
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c9:focus {
  background-color: #60666E;
}

.c11:focus {
  background-color: #60666E;
}

.c11:hover {
  background-color: #878f9a;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: var(--spacing-1x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: unset;
}

.c6 * + * {
  margin-left: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="default"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        default
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, info) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #602FA0;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: 0 var(--spacing-2x) var(--spacing-1x) var(--spacing-5x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: var(--spacing-1x);
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  left: calc(var(--spacing-3x) * -1);
  position: absolute;
  top: var(--spacing-half);
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #cfc1e3;
  color: #cfc1e3;
}

.c9:focus {
  background-color: #602FA0;
}

.c11:focus {
  background-color: #602FA0;
}

.c11:hover {
  background-color: #3a1c60;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: var(--spacing-1x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: unset;
}

.c6 * + * {
  margin-left: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="info"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        info
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, warning) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: 0 var(--spacing-2x) var(--spacing-1x) var(--spacing-5x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: var(--spacing-1x);
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  left: calc(var(--spacing-3x) * -1);
  position: absolute;
  top: var(--spacing-half);
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9 {
  border-color: #000000;
  color: #000000;
}

.c9:hover {
  border-color: #9e6900;
  color: #9e6900;
}

.c9:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11 {
  color: #000000;
}

.c11:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11:hover {
  background-color: #9e6900;
  color: #FFFFFF;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: var(--spacing-1x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: unset;
}

.c6 * + * {
  margin-left: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        warning
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, alert) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-2x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  margin-top: 0;
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #f99d99;
  color: #f99d99;
}

.c9:focus {
  background-color: #CD2C23;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: var(--spacing-3x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: 100%;
}

.c6 * + * {
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        alert
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, default) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-2x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  margin-top: 0;
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c9:focus {
  background-color: #60666E;
}

.c11:focus {
  background-color: #60666E;
}

.c11:hover {
  background-color: #878f9a;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: var(--spacing-3x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: 100%;
}

.c6 * + * {
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="default"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        default
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, info) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #602FA0;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-2x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  margin-top: 0;
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #cfc1e3;
  color: #cfc1e3;
}

.c9:focus {
  background-color: #602FA0;
}

.c11:focus {
  background-color: #602FA0;
}

.c11:hover {
  background-color: #3a1c60;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: var(--spacing-3x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: 100%;
}

.c6 * + * {
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="info"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        info
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, warning) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c8:hover,
.c8[aria-expanded="true"] {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c10:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-2x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  margin-top: 0;
  position: relative;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9 {
  border-color: #000000;
  color: #000000;
}

.c9:hover {
  border-color: #9e6900;
  color: #9e6900;
}

.c9:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11 {
  color: #000000;
}

.c11:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11:hover {
  background-color: #9e6900;
  color: #FFFFFF;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: var(--spacing-3x);
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  width: 100%;
}

.c6 * + * {
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <b
        class="c4"
      >
        warning
      </b>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;
